--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -3,13 +3,10 @@
 <!--
   Copyright (c) 2015, 2019, Gluon and/or its affiliates.
   All rights reserved. Use is subject to license terms.
-
   This file is available and licensed under the following license:
-
   Redistribution and use in source and binary forms, with or without
   modification, are permitted provided that the following conditions
   are met:
-
   - Redistributions of source code must retain the above copyright
     notice, this list of conditions and the following disclaimer.
   - Redistributions in binary form must reproduce the above copyright
@@ -18,7 +15,6 @@
   - Neither the name of Oracle Corporation nor the names of its
     contributors may be used to endorse or promote products derived
     from this software without specific prior written permission.
-
   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
   "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
   LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
@@ -44,27 +40,31 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="562.0" prefWidth="798.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.mainController">
+<VBox prefHeight="562.0" prefWidth="798.0" style="-fx-background-color: #708090;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.mainController">
   <children>
-      <TabPane prefHeight="566.0" prefWidth="798.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane prefHeight="566.0" prefWidth="798.0" style="-fx-background-color: #708090;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab fx:id="shopTab" text="Shop View">
                <content>
-                  <AnchorPane prefHeight="863.0" prefWidth="1037.0">
+                  <AnchorPane prefHeight="863.0" prefWidth="1037.0" style="-fx-background-color: #708090;">
                      <children>
                         <Pane fx:id="storeField" layoutX="6.0" layoutY="75.0" prefHeight="430.0" prefWidth="367.0">
                            <children>
-                              <TextField fx:id="itemSearch" layoutX="14.0" layoutY="15.0" prefHeight="26.0" prefWidth="195.0" promptText="Search item..." />
-                              <ListView fx:id="storeList" layoutX="150.0" layoutY="58.0" onMouseClicked="#ShopClicked" prefHeight="354.0" prefWidth="185.0">
+                              <TextField fx:id="itemSearch" layoutX="14.0" layoutY="15.0" onKeyPressed="#searchKeyPress" prefHeight="26.0" prefWidth="195.0" promptText="Search item..." />
+                              <ListView fx:id="storeList" layoutX="163.0" layoutY="58.0" onMouseClicked="#ShopClicked" prefHeight="354.0" prefWidth="191.0" style="-fx-background-color: #b0c4de;">
                                  <padding>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </ListView>
-                              <Label layoutX="27.0" layoutY="62.0" prefHeight="17.0" prefWidth="66.0" text="Filters" />
-                              <ListView fx:id="FilterView" layoutX="9.0" layoutY="87.0" onMouseClicked="#Filterclicked" prefHeight="296.0" prefWidth="130.0" />
+                              <Label layoutX="35.0" layoutY="58.0" prefHeight="17.0" prefWidth="66.0" text="Filters" />
+                              <ListView fx:id="FilterView" layoutX="6.0" layoutY="87.0" onMouseClicked="#Filterclicked" prefHeight="296.0" prefWidth="149.0" style="-fx-background-color: #b0c4de;" />
                               <Button fx:id="searchButton" layoutX="219.0" layoutY="15.0" mnemonicParsing="false" onAction="#pressSearch" prefHeight="25.0" prefWidth="73.0" text="Search" />
                            </children>
                         </Pane>
@@ -86,7 +86,7 @@
                                  </top>
                               </BorderPane>
                               <Polygon fill="DODGERBLUE" layoutX="368.0" layoutY="119.0" onMouseClicked="#NextImgR" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="90.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="15.0" />
-                              <BorderPane layoutX="94.0" layoutY="213.0" prefHeight="88.0" prefWidth="259.0">
+                              <BorderPane layoutX="94.0" layoutY="213.0" prefHeight="88.0" prefWidth="259.0" style="-fx-background-color: #b0c4de;">
                                  <left>
                                     <Rectangle fill="DODGERBLUE" height="88.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
                                  </left>
@@ -110,19 +110,47 @@
                               <Polygon fill="DODGERBLUE" layoutX="79.0" layoutY="119.0" onMouseClicked="#NextImgL" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="270.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="-15.0" />
                            </children>
                         </Pane>
-                        <HBox layoutX="25.0" layoutY="14.0" prefHeight="59.0" prefWidth="753.0" />
+                        <HBox layoutX="337.0" layoutY="14.0" prefHeight="59.0" prefWidth="442.0">
+                           <children>
+                              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="446.0" text="207 Supermarket" textAlignment="CENTER" underline="true">
+                                 <font>
+                                    <Font name="Sylfaen" size="56.0" />
+                                 </font>
+                                 <textFill>
+                                    <LinearGradient endX="1.0" endY="1.0">
+                                       <stops>
+                                          <Stop>
+                                             <color>
+                                                <Color red="1.0" green="0.6629629731178284" blue="0.9831481575965881" />
+                                             </color>
+                                          </Stop>
+                                          <Stop offset="0.9969278033794162">
+                                             <color>
+                                                <Color red="0.6111111044883728" green="0.8898147940635681" blue="1.0" />
+                                             </color>
+                                          </Stop>
+                                          <Stop offset="1.0">
+                                             <color>
+                                                <Color red="1.0" green="0.5407407283782959" blue="0.9770370125770569" />
+                                             </color>
+                                          </Stop>
+                                       </stops>
+                                    </LinearGradient>
+                                 </textFill>
+                              </Label>
+                           </children></HBox>
                      </children>
                   </AnchorPane>
                </content>
           </Tab>
           <Tab fx:id="cartTab" text="Cart View">
                <content>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #708090;">
                      <children>
                         <Pane layoutX="26.0" layoutY="40.0" prefHeight="454.0" prefWidth="320.0">
                            <children>
-                              <ListView fx:id="cartList" layoutX="21.0" layoutY="69.0" onMouseClicked="#CartClicked" prefHeight="233.0" prefWidth="269.0" />
-                              <Button fx:id="cartRemove" layoutX="73.0" layoutY="402.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
+                              <ListView fx:id="cartList" layoutX="21.0" layoutY="69.0" onMouseClicked="#CartClicked" prefHeight="233.0" prefWidth="269.0" style="-fx-background-color: #b0c4de;" />
+                              <Button fx:id="cartRemove" layoutX="30.0" layoutY="402.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
                               <BorderPane layoutX="30.0" layoutY="338.0" prefHeight="43.0" prefWidth="259.0">
                                  <bottom>
                                     <Rectangle fill="DODGERBLUE" height="10.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
@@ -137,7 +165,7 @@
                                     <Rectangle fill="DODGERBLUE" height="29.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="10.0" BorderPane.alignment="CENTER" />
                                  </right>
                                  <center>
-                                    <Label fx:id="totalPriceView" alignment="TOP_CENTER" prefHeight="17.0" prefWidth="231.0" text="Total: $0.00" BorderPane.alignment="CENTER" />
+                                    <Label fx:id="totalPriceView" alignment="CENTER" prefHeight="30.0" prefWidth="269.0" style="-fx-background-color: #b0c4de;" text="Total: $0.00" BorderPane.alignment="CENTER" />
                                  </center>
                               </BorderPane>
                               <Pane fx:id="questionBar" layoutX="21.0" layoutY="14.0" prefHeight="51.0" prefWidth="269.0" visible="false">
@@ -147,6 +175,14 @@
                                     <Label alignment="TOP_CENTER" layoutX="23.0" layoutY="2.0" prefHeight="17.0" prefWidth="225.0" text="Remove All?" textAlignment="CENTER" />
                                  </children>
                               </Pane>
+                              <Pane fx:id="clearPane" layoutX="21.0" layoutY="7.0" prefHeight="56.0" prefWidth="269.0" visible="false">
+                                 <children>
+                                    <Button fx:id="clearButtonYes" layoutX="29.0" layoutY="26.0" mnemonicParsing="false" onAction="#clearYes" prefHeight="25.0" prefWidth="92.0" text="Yes" />
+                                    <Button fx:id="clearButtonNo" layoutX="142.0" layoutY="26.0" mnemonicParsing="false" onAction="#clearNo" prefHeight="25.0" prefWidth="92.0" text="No" />
+                                    <Label fx:id="clearLabel" layoutX="103.0" layoutY="6.0" prefHeight="17.0" prefWidth="59.0" text="Clear cart?" />
+                                 </children>
+                              </Pane>
+                              <Button fx:id="clearCart" layoutX="215.0" layoutY="402.0" mnemonicParsing="false" onAction="#clearCart" prefHeight="38.0" prefWidth="75.0" text="Clear" />
                            </children>
                         </Pane>
                         <Pane fx:id="itemField1" layoutX="338.0" layoutY="96.0" prefHeight="398.0" prefWidth="446.0" visible="false">
@@ -166,7 +202,7 @@
                                  </top>
                               </BorderPane>
                               <Polygon fx:id="rTri" fill="DODGERBLUE" layoutX="368.0" layoutY="119.0" onMouseClicked="#NextImgR" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="90.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="15.0" />
-                              <BorderPane layoutX="94.0" layoutY="213.0" prefHeight="88.0" prefWidth="259.0">
+                              <BorderPane layoutX="94.0" layoutY="213.0" prefHeight="88.0" prefWidth="259.0" style="-fx-background-color: #b0c4de;">
                                  <left>
                                     <Rectangle fill="DODGERBLUE" height="88.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
                                  </left>
@@ -190,6 +226,36 @@
                               <Polygon fx:id="lTri" fill="DODGERBLUE" layoutX="79.0" layoutY="119.0" onMouseClicked="#NextImgL" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="270.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="-15.0" />
                            </children>
                         </Pane>
+                        <HBox layoutX="337.0" layoutY="14.0" prefHeight="59.0" prefWidth="442.0">
+                           <children>
+                              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="446.0" text="207 Supermarket" textAlignment="CENTER" underline="true">
+                                 <font>
+                                    <Font name="Sylfaen" size="56.0" />
+                                 </font>
+                                 <textFill>
+                                    <LinearGradient endX="1.0" endY="1.0">
+                                       <stops>
+                                          <Stop>
+                                             <color>
+                                                <Color red="1.0" green="0.6629629731178284" blue="0.9831481575965881" />
+                                             </color>
+                                          </Stop>
+                                          <Stop offset="0.9969278033794162">
+                                             <color>
+                                                <Color red="0.6111111044883728" green="0.8898147940635681" blue="1.0" />
+                                             </color>
+                                          </Stop>
+                                          <Stop offset="1.0">
+                                             <color>
+                                                <Color red="1.0" green="0.5407407283782959" blue="0.9770370125770569" />
+                                             </color>
+                                          </Stop>
+                                       </stops>
+                                    </LinearGradient>
+                                 </textFill>
+                              </Label>
+                           </children>
+                        </HBox>
                      </children>
                   </AnchorPane>
                </content>
