--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -34,6 +34,8 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -58,14 +60,15 @@
                         <Pane fx:id="storeField" layoutX="6.0" layoutY="75.0" prefHeight="430.0" prefWidth="367.0">
                            <children>
                               <TextField fx:id="itemSearch" layoutX="14.0" layoutY="15.0" onKeyPressed="#searchKeyPress" prefHeight="26.0" prefWidth="195.0" promptText="Search item..." />
-                              <ListView fx:id="storeList" layoutX="163.0" layoutY="58.0" onMouseClicked="#ShopClicked" prefHeight="354.0" prefWidth="191.0" style="-fx-background-color: #b0c4de;">
-                                 <padding>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                 </padding>
-                              </ListView>
                               <Label layoutX="35.0" layoutY="58.0" prefHeight="17.0" prefWidth="66.0" text="Filters" />
                               <ListView fx:id="FilterView" layoutX="6.0" layoutY="87.0" onMouseClicked="#Filterclicked" prefHeight="296.0" prefWidth="149.0" style="-fx-background-color: #b0c4de;" />
                               <Button fx:id="searchButton" layoutX="219.0" layoutY="15.0" mnemonicParsing="false" onAction="#pressSearch" prefHeight="25.0" prefWidth="73.0" text="Search" />
+                              <TableView fx:id="ShopTableView" layoutX="163.0" layoutY="58.0" onMouseClicked="#ShopTableClicked" prefHeight="354.0" prefWidth="191.0" style="-fx-background-color: #b0c4de;">
+                                <columns>
+                                  <TableColumn fx:id="ShopFoodCol" editable="false" prefWidth="126.0" sortable="false" text="Food" />
+                                  <TableColumn fx:id="ShopPriceCol" editable="false" prefWidth="64.0" sortable="false" text="Price" />
+                                </columns>
+                              </TableView>
                            </children>
                         </Pane>
                         <Pane fx:id="itemField" layoutX="359.0" layoutY="75.0" prefHeight="398.0" prefWidth="419.0" visible="false">
@@ -147,83 +150,93 @@
                <content>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #708090;">
                      <children>
-                        <Pane layoutX="26.0" layoutY="40.0" prefHeight="454.0" prefWidth="320.0">
+                        <Pane layoutX="2.0" layoutY="2.0" prefHeight="529.0" prefWidth="798.0">
                            <children>
-                              <ListView fx:id="cartList" layoutX="21.0" layoutY="69.0" onMouseClicked="#CartClicked" prefHeight="233.0" prefWidth="269.0" style="-fx-background-color: #b0c4de;" />
-                              <Button fx:id="cartRemove" layoutX="30.0" layoutY="402.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
-                              <BorderPane layoutX="30.0" layoutY="338.0" prefHeight="43.0" prefWidth="259.0">
-                                 <bottom>
-                                    <Rectangle fill="DODGERBLUE" height="10.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
-                                 </bottom>
-                                 <top>
-                                    <Rectangle fill="DODGERBLUE" height="10.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
-                                 </top>
-                                 <left>
-                                    <Rectangle fill="DODGERBLUE" height="29.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="10.0" BorderPane.alignment="CENTER" />
-                                 </left>
-                                 <right>
-                                    <Rectangle fill="DODGERBLUE" height="29.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="10.0" BorderPane.alignment="CENTER" />
-                                 </right>
-                                 <center>
-                                    <Label fx:id="totalPriceView" alignment="CENTER" prefHeight="30.0" prefWidth="269.0" style="-fx-background-color: #b0c4de;" text="Total: $0.00" BorderPane.alignment="CENTER" />
-                                 </center>
-                              </BorderPane>
-                              <Pane fx:id="questionBar" layoutX="21.0" layoutY="14.0" prefHeight="51.0" prefWidth="269.0" visible="false">
+                              <Pane layoutX="21.0" layoutY="29.0" prefHeight="454.0" prefWidth="320.0">
                                  <children>
-                                    <Button fx:id="questionyesBar" layoutX="32.0" layoutY="22.0" mnemonicParsing="false" onAction="#questionHitYes" prefHeight="25.0" prefWidth="84.0" text="Yes" />
-                                    <Button fx:id="questionNoBar" layoutX="145.0" layoutY="24.0" mnemonicParsing="false" onAction="#questionHitNo" prefHeight="25.0" prefWidth="84.0" text="No" />
-                                    <Label alignment="TOP_CENTER" layoutX="23.0" layoutY="2.0" prefHeight="17.0" prefWidth="225.0" text="Remove All?" textAlignment="CENTER" />
+                                    <TableView fx:id="CartTableView" layoutX="42.0" layoutY="20.0" onMouseClicked="#CartTableClicked" prefHeight="306.0" prefWidth="236.0" style="-fx-background-color: #b0c4de;">
+                                       <columns>
+                                          <TableColumn fx:id="CartFoodCol" editable="false" prefWidth="153.0" sortable="false" text="Food" />
+                                          <TableColumn fx:id="CartPriceCol" editable="false" minWidth="5.0" prefWidth="43.0" sortable="false" text="Price" />
+                                          <TableColumn fx:id="CartAmtCol" editable="false" prefWidth="39.0" sortable="false" text="Amt" />
+                                       </columns>
+                                    </TableView>
+                                    <Button fx:id="cartRemove" layoutX="30.0" layoutY="402.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
+                                    <BorderPane layoutX="30.0" layoutY="338.0" prefHeight="43.0" prefWidth="259.0">
+                                       <bottom>
+                                          <Rectangle fill="DODGERBLUE" height="10.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                       </bottom>
+                                       <top>
+                                          <Rectangle fill="DODGERBLUE" height="10.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                       </top>
+                                       <left>
+                                          <Rectangle fill="DODGERBLUE" height="29.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="10.0" BorderPane.alignment="CENTER" />
+                                       </left>
+                                       <right>
+                                          <Rectangle fill="DODGERBLUE" height="29.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="10.0" BorderPane.alignment="CENTER" />
+                                       </right>
+                                       <center>
+                                          <Label fx:id="totalPriceView" alignment="CENTER" prefHeight="30.0" prefWidth="269.0" style="-fx-background-color: #b0c4de;" text="Total: $0.00" BorderPane.alignment="CENTER" />
+                                       </center>
+                                    </BorderPane>
+                                    <Pane fx:id="questionBar" layoutX="21.0" layoutY="14.0" prefHeight="51.0" prefWidth="269.0" visible="false">
+                                       <children>
+                                          <Button fx:id="questionyesBar" layoutX="32.0" layoutY="22.0" mnemonicParsing="false" onAction="#questionHitYes" prefHeight="25.0" prefWidth="84.0" text="Yes" />
+                                          <Button fx:id="questionNoBar" layoutX="145.0" layoutY="24.0" mnemonicParsing="false" onAction="#questionHitNo" prefHeight="25.0" prefWidth="84.0" text="No" />
+                                          <Label alignment="TOP_CENTER" layoutX="23.0" layoutY="2.0" prefHeight="17.0" prefWidth="225.0" text="Remove All?" textAlignment="CENTER" />
+                                       </children>
+                                    </Pane>
+                                    <Pane fx:id="clearPane" layoutX="21.0" layoutY="7.0" prefHeight="56.0" prefWidth="269.0" visible="false">
+                                       <children>
+                                          <Button fx:id="clearButtonYes" layoutX="29.0" layoutY="26.0" mnemonicParsing="false" onAction="#clearYes" prefHeight="25.0" prefWidth="92.0" text="Yes" />
+                                          <Button fx:id="clearButtonNo" layoutX="142.0" layoutY="26.0" mnemonicParsing="false" onAction="#clearNo" prefHeight="25.0" prefWidth="92.0" text="No" />
+                                          <Label fx:id="clearLabel" layoutX="103.0" layoutY="6.0" prefHeight="17.0" prefWidth="59.0" text="Clear cart?" />
+                                       </children>
+                                    </Pane>
+                                    <Button fx:id="clearCart" layoutX="215.0" layoutY="402.0" mnemonicParsing="false" onAction="#clearCart" prefHeight="38.0" prefWidth="75.0" text="Clear" />
                                  </children>
                               </Pane>
-                              <Pane fx:id="clearPane" layoutX="21.0" layoutY="7.0" prefHeight="56.0" prefWidth="269.0" visible="false">
+                              <Pane fx:id="itemField1" layoutX="330.0" layoutY="85.0" prefHeight="398.0" prefWidth="446.0">
                                  <children>
-                                    <Button fx:id="clearButtonYes" layoutX="29.0" layoutY="26.0" mnemonicParsing="false" onAction="#clearYes" prefHeight="25.0" prefWidth="92.0" text="Yes" />
-                                    <Button fx:id="clearButtonNo" layoutX="142.0" layoutY="26.0" mnemonicParsing="false" onAction="#clearNo" prefHeight="25.0" prefWidth="92.0" text="No" />
-                                    <Label fx:id="clearLabel" layoutX="103.0" layoutY="6.0" prefHeight="17.0" prefWidth="59.0" text="Clear cart?" />
+                                    <BorderPane fx:id="imgViewer1" layoutX="94.0" layoutY="18.0" prefHeight="178.0" prefWidth="259.0">
+                                       <left>
+                                          <Rectangle fill="DODGERBLUE" height="153.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                       </left>
+                                       <bottom>
+                                          <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                       </bottom>
+                                       <right>
+                                          <Rectangle fill="DODGERBLUE" height="153.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                       </right>
+                                       <top>
+                                          <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                       </top>
+                                    </BorderPane>
+                                    <Polygon fx:id="rTri" fill="DODGERBLUE" layoutX="368.0" layoutY="119.0" onMouseClicked="#NextImgR" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="90.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="15.0" />
+                                    <BorderPane layoutX="94.0" layoutY="213.0" prefHeight="88.0" prefWidth="259.0" style="-fx-background-color: #b0c4de;">
+                                       <left>
+                                          <Rectangle fill="DODGERBLUE" height="88.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                       </left>
+                                       <bottom>
+                                          <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                       </bottom>
+                                       <right>
+                                          <Rectangle fill="DODGERBLUE" height="88.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                       </right>
+                                       <top>
+                                          <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                       </top>
+                                       <center>
+                                          <Label fx:id="itemDescription1" alignment="TOP_LEFT" prefHeight="88.0" prefWidth="233.0" text="itemDescription" wrapText="true" BorderPane.alignment="TOP_LEFT">
+                                             <BorderPane.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                             </BorderPane.margin>
+                                          </Label>
+                                       </center>
+                                    </BorderPane>
+                                    <Polygon fx:id="lTri" fill="DODGERBLUE" layoutX="79.0" layoutY="119.0" onMouseClicked="#NextImgL" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="270.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="-15.0" />
                                  </children>
                               </Pane>
-                              <Button fx:id="clearCart" layoutX="215.0" layoutY="402.0" mnemonicParsing="false" onAction="#clearCart" prefHeight="38.0" prefWidth="75.0" text="Clear" />
-                           </children>
-                        </Pane>
-                        <Pane fx:id="itemField1" layoutX="338.0" layoutY="96.0" prefHeight="398.0" prefWidth="446.0" visible="false">
-                           <children>
-                              <BorderPane fx:id="imgViewer1" layoutX="94.0" layoutY="18.0" prefHeight="178.0" prefWidth="259.0">
-                                 <left>
-                                    <Rectangle fill="DODGERBLUE" height="153.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
-                                 </left>
-                                 <bottom>
-                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
-                                 </bottom>
-                                 <right>
-                                    <Rectangle fill="DODGERBLUE" height="153.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
-                                 </right>
-                                 <top>
-                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
-                                 </top>
-                              </BorderPane>
-                              <Polygon fx:id="rTri" fill="DODGERBLUE" layoutX="368.0" layoutY="119.0" onMouseClicked="#NextImgR" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="90.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="15.0" />
-                              <BorderPane layoutX="94.0" layoutY="213.0" prefHeight="88.0" prefWidth="259.0" style="-fx-background-color: #b0c4de;">
-                                 <left>
-                                    <Rectangle fill="DODGERBLUE" height="88.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
-                                 </left>
-                                 <bottom>
-                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
-                                 </bottom>
-                                 <right>
-                                    <Rectangle fill="DODGERBLUE" height="88.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
-                                 </right>
-                                 <top>
-                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
-                                 </top>
-                                 <center>
-                                    <Label fx:id="itemDescription1" alignment="TOP_LEFT" prefHeight="88.0" prefWidth="233.0" text="itemDescription" wrapText="true" BorderPane.alignment="TOP_LEFT">
-                                       <BorderPane.margin>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </BorderPane.margin>
-                                    </Label>
-                                 </center>
-                              </BorderPane>
-                              <Polygon fx:id="lTri" fill="DODGERBLUE" layoutX="79.0" layoutY="119.0" onMouseClicked="#NextImgL" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="270.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="-15.0" />
                            </children>
                         </Pane>
                         <HBox layoutX="337.0" layoutY="14.0" prefHeight="59.0" prefWidth="442.0">
